<resources>
    <string name="app_name">8.DataBinding</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Update</string>
    <string name="next_activity">Next Activity</string>
    <string name="text1a">Text View</string>
    <string name="Header">Data Binding</string>
    <string name="user_activity">Go To User1 Activity</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
</resources>
