<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.a8databinding.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Header"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text1a"
                android:textStyle="bold" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/button1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/UserActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/user_activity"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goToFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:padding="@dimen/activity_vertical_margin"
                android:text="Go to New Fragment"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</layout>